[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/ui_panel.png" type="Texture" id=1]
[ext_resource path="res://UI/MainUITheme.tres" type="Theme" id=2]
[ext_resource path="res://UI/InteractMenu.gd" type="Script" id=3]

[node name="InteractMenu" type="MarginContainer"]
margin_right = 104.0
margin_bottom = 208.0
grow_horizontal = 2
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Panel" type="NinePatchRect" parent="."]
margin_right = 104.0
margin_bottom = 236.0
texture = ExtResource( 1 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 104.0
margin_bottom = 236.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 92.0
margin_bottom = 224.0

[node name="ObjectNameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 80.0
margin_bottom = 16.0
text = "OBJECT NAME"
align = 1

[node name="SlashButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 20.0
margin_right = 80.0
margin_bottom = 44.0
rect_min_size = Vector2( 80, 24 )
text = "Cut"

[node name="ExplodeButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 48.0
margin_right = 80.0
margin_bottom = 72.0
rect_min_size = Vector2( 80, 24 )
text = "Blow Up"

[node name="SmashButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 76.0
margin_right = 80.0
margin_bottom = 100.0
rect_min_size = Vector2( 80, 24 )
text = "Smash"

[node name="BurnButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 104.0
margin_right = 80.0
margin_bottom = 128.0
rect_min_size = Vector2( 80, 24 )
text = "Burn"

[node name="HackButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 132.0
margin_right = 80.0
margin_bottom = 156.0
rect_min_size = Vector2( 80, 24 )
text = "Hack"

[node name="PicklockButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 160.0
margin_right = 80.0
margin_bottom = 184.0
rect_min_size = Vector2( 80, 24 )
text = "Pick Lock"

[node name="DoneButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 188.0
margin_right = 80.0
margin_bottom = 212.0
rect_min_size = Vector2( 80, 24 )
text = "Done"

[connection signal="pressed" from="MarginContainer/VBoxContainer/DoneButton" to="." method="_on_DoneButton_pressed"]
